Add registration campaign counters
